add text to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
          <p>{{>header}}</p>
+         <p>This is created by Mad Moneky.It uses some kind bhang bhosda to get data.</p>
         <div class="first-img"></div>
         </div>
 
