add image of weather

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,16 @@ button{
         padding: 8px;
 }
 
+.forecast{
+    display:flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    place-items: center;
+}
+
+#msg-2{
+        padding: 0 3%;
+}
 .first-img{
         background-image: url('../image/duck.jfif');
         width: 100%;
