--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,10 @@
                 <button>Search</button>
             </form>
             <p id="msg-1"></p>
+            <div class ="forecast">
             <p id="msg-2"></p>
+            </div>
+            
         </div>
         
         <p>{{>footer}}</p>
